--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -20,13 +20,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[6, 1],\n",
-       "       [2, 2],\n",
-       "       [6, 6],\n",
+       "array([[4, 4],\n",
+       "       [5, 6],\n",
+       "       [5, 4],\n",
        "       ...,\n",
-       "       [3, 2],\n",
-       "       [3, 5],\n",
-       "       [4, 4]])"
+       "       [5, 5],\n",
+       "       [2, 5],\n",
+       "       [2, 6]])"
       ]
      },
      "execution_count": 2,
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "0.16404"
+       "0.16633"
       ]
      },
      "execution_count": 3,
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "0.22114"
+       "0.21958"
       ]
      },
      "execution_count": 4,
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "0.062265"
+       "0.06323"
       ]
      },
      "execution_count": 5,
@@ -141,17 +141,17 @@
     {
      "data": {
       "text/plain": [
-       "0        19.297117\n",
-       "1         8.903568\n",
-       "2        13.971573\n",
-       "3        10.521719\n",
-       "4        15.999536\n",
+       "0        12.850554\n",
+       "1        18.277396\n",
+       "2        16.664603\n",
+       "3        20.679020\n",
+       "4         9.154917\n",
        "           ...    \n",
-       "99995    10.605488\n",
-       "99996    20.880049\n",
-       "99997    18.089978\n",
-       "99998    16.670840\n",
-       "99999    14.303649\n",
+       "99995    19.926124\n",
+       "99996    15.554104\n",
+       "99997    12.900595\n",
+       "99998    12.391498\n",
+       "99999    12.580638\n",
        "Length: 100000, dtype: float64"
       ]
      },
@@ -185,15 +185,15 @@
     {
      "data": {
       "text/plain": [
-       "0        False\n",
-       "1         True\n",
+       "0         True\n",
+       "1        False\n",
        "2         True\n",
-       "3         True\n",
+       "3        False\n",
        "4         True\n",
        "         ...  \n",
-       "99995     True\n",
-       "99996    False\n",
-       "99997    False\n",
+       "99995    False\n",
+       "99996     True\n",
+       "99997     True\n",
        "99998     True\n",
        "99999     True\n",
        "Length: 100000, dtype: bool"
@@ -218,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "0.72454"
+       "0.72496"
       ]
      },
      "execution_count": 8,
@@ -239,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "0.211989"
+       "0.2117788"
       ]
      },
      "execution_count": 9,
@@ -265,17 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "a8983ba9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.818632"
+       "0.818429"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,17 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "132e8793",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.669518"
+       "0.670511"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,17 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "dc451a17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4514"
+       "0.451822"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,17 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "fe76530c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.164797"
+       "0.164539"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,23 +400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "daaa13af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 1, 1],\n",
-       "       [0, 1, 1],\n",
+       "array([[1, 1, 0],\n",
+       "       [0, 0, 1],\n",
        "       [1, 1, 1],\n",
        "       ...,\n",
+       "       [1, 0, 1],\n",
        "       [1, 0, 0],\n",
-       "       [1, 1, 1],\n",
        "       [1, 1, 1]])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "24fec6ce",
    "metadata": {},
    "outputs": [],
@@ -446,17 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "id": "1c8decb2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.027"
+       "0.0253"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,23 +469,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "id": "62f7362f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1, 1, ..., 1, 1, 1],\n",
-       "       [0, 1, 0, ..., 1, 0, 1],\n",
-       "       [0, 1, 0, ..., 1, 1, 0],\n",
+       "array([[1, 1, 1, ..., 0, 1, 0],\n",
+       "       [0, 1, 0, ..., 0, 1, 0],\n",
+       "       [0, 0, 1, ..., 1, 1, 1],\n",
        "       ...,\n",
        "       [1, 1, 1, ..., 1, 1, 1],\n",
-       "       [1, 1, 1, ..., 1, 0, 1],\n",
-       "       [1, 0, 1, ..., 1, 0, 1]])"
+       "       [1, 1, 1, ..., 0, 1, 1],\n",
+       "       [1, 0, 1, ..., 1, 1, 1]])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "id": "960605a0",
    "metadata": {},
    "outputs": [
@@ -540,13 +540,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -554,37 +554,37 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -606,14 +606,14 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99996</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -623,7 +623,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -633,9 +633,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -643,9 +643,9 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -655,22 +655,22 @@
       ],
       "text/plain": [
        "       0  1  2  3  4  5  6\n",
-       "0      0  1  1  1  1  1  1\n",
-       "1      0  1  0  1  1  0  1\n",
-       "2      0  1  0  1  1  1  0\n",
-       "3      1  1  1  1  1  1  1\n",
-       "4      0  1  1  1  1  1  1\n",
+       "0      1  1  1  1  0  1  0\n",
+       "1      0  1  0  1  0  1  0\n",
+       "2      0  0  1  1  1  1  1\n",
+       "3      0  1  1  1  1  1  0\n",
+       "4      0  1  0  1  0  1  1\n",
        "...   .. .. .. .. .. .. ..\n",
-       "99995  0  1  1  0  0  1  0\n",
-       "99996  1  1  1  1  1  1  1\n",
-       "99997  1  1  1  0  1  1  1\n",
-       "99998  1  1  1  0  1  0  1\n",
-       "99999  1  0  1  0  1  0  1\n",
+       "99995  0  1  1  0  0  1  1\n",
+       "99996  1  1  0  0  1  1  1\n",
+       "99997  1  1  1  1  1  1  1\n",
+       "99998  1  1  1  1  0  1  1\n",
+       "99999  1  0  1  1  1  1  1\n",
        "\n",
        "[100000 rows x 7 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,17 +682,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "id": "1bf6f60a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.99985"
+       "0.99974"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,17 +704,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 20,
    "id": "29e995ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4939"
+       "0.4954"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,17 +734,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
+   "id": "fdfdd0c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5858"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_people = ncols = 20\n",
+    "n_trials = nrows = 10000\n",
+    "days = range(365)\n",
+    "\n",
+    "bdays = np.random.choice(days, size=(nrows,ncols))\n",
+    "bdays = pd.DataFrame(bdays)\n",
+    "bdays.apply(lambda row: row.is_unique, axis=1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "12613473",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1079"
+       "0.1048"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,34 +784,6 @@
     "bdays = np.random.choice(days, size=(nrows,ncols))\n",
     "bdays = pd.DataFrame(bdays)\n",
     "bdays.apply(lambda row: row.is_unique, axis=1).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "22dbc5cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9703735795779884"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def probability(n):\n",
-    "    q = 1\n",
-    "    for i in range(1,n):\n",
-    "        probability = i/365\n",
-    "        q *= (1 - probability)\n",
-    "    p = 1 - q\n",
-    "    return p\n",
-    "probability(50)"
    ]
   },
   {
