--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -20,13 +20,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[4, 4],\n",
-       "       [5, 6],\n",
-       "       [5, 4],\n",
+       "array([[2, 3],\n",
+       "       [3, 4],\n",
+       "       [1, 6],\n",
        "       ...,\n",
-       "       [5, 5],\n",
-       "       [2, 5],\n",
-       "       [2, 6]])"
+       "       [1, 3],\n",
+       "       [4, 3],\n",
+       "       [3, 4]])"
       ]
      },
      "execution_count": 2,
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "0.16633"
+       "0.16631"
       ]
      },
      "execution_count": 3,
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "0.21958"
+       "0.22007"
       ]
      },
      "execution_count": 4,
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "0.06323"
+       "0.062875"
       ]
      },
      "execution_count": 5,
@@ -141,17 +141,17 @@
     {
      "data": {
       "text/plain": [
-       "0        12.850554\n",
-       "1        18.277396\n",
-       "2        16.664603\n",
-       "3        20.679020\n",
-       "4         9.154917\n",
+       "0        15.657674\n",
+       "1        15.296289\n",
+       "2        14.710887\n",
+       "3        19.243520\n",
+       "4        14.255598\n",
        "           ...    \n",
-       "99995    19.926124\n",
-       "99996    15.554104\n",
-       "99997    12.900595\n",
-       "99998    12.391498\n",
-       "99999    12.580638\n",
+       "99995    15.341805\n",
+       "99996     8.132730\n",
+       "99997    15.534415\n",
+       "99998    16.351044\n",
+       "99999    12.860487\n",
        "Length: 100000, dtype: float64"
       ]
      },
@@ -186,12 +186,12 @@
      "data": {
       "text/plain": [
        "0         True\n",
-       "1        False\n",
+       "1         True\n",
        "2         True\n",
        "3        False\n",
        "4         True\n",
        "         ...  \n",
-       "99995    False\n",
+       "99995     True\n",
        "99996     True\n",
        "99997     True\n",
        "99998     True\n",
@@ -218,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "0.72496"
+       "0.72625"
       ]
      },
      "execution_count": 8,
@@ -239,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "0.2117788"
+       "0.2119304"
       ]
      },
      "execution_count": 9,
@@ -272,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "0.818429"
+       "0.818884"
       ]
      },
      "execution_count": 10,
@@ -308,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "0.670511"
+       "0.669948"
       ]
      },
      "execution_count": 11,
@@ -341,7 +341,7 @@
     {
      "data": {
       "text/plain": [
-       "0.451822"
+       "0.451812"
       ]
      },
      "execution_count": 12,
@@ -374,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "0.164539"
+       "0.165176"
       ]
      },
      "execution_count": 13,
@@ -407,12 +407,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 1, 0],\n",
-       "       [0, 0, 1],\n",
+       "array([[1, 0, 1],\n",
        "       [1, 1, 1],\n",
+       "       [1, 1, 0],\n",
        "       ...,\n",
-       "       [1, 0, 1],\n",
-       "       [1, 0, 0],\n",
+       "       [1, 1, 1],\n",
+       "       [0, 1, 1],\n",
        "       [1, 1, 1]])"
       ]
      },
@@ -453,7 +453,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0253"
+       "0.0265"
       ]
      },
      "execution_count": 16,
@@ -476,13 +476,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 1, 1, ..., 0, 1, 0],\n",
-       "       [0, 1, 0, ..., 0, 1, 0],\n",
-       "       [0, 0, 1, ..., 1, 1, 1],\n",
+       "array([[1, 0, 0, ..., 0, 1, 0],\n",
+       "       [0, 0, 0, ..., 1, 1, 0],\n",
+       "       [0, 1, 1, ..., 1, 1, 1],\n",
        "       ...,\n",
-       "       [1, 1, 1, ..., 1, 1, 1],\n",
-       "       [1, 1, 1, ..., 0, 1, 1],\n",
-       "       [1, 0, 1, ..., 1, 1, 1]])"
+       "       [1, 1, 0, ..., 1, 0, 1],\n",
+       "       [0, 1, 1, ..., 1, 1, 0],\n",
+       "       [1, 1, 1, ..., 1, 1, 0]])"
       ]
      },
      "execution_count": 17,
@@ -541,8 +541,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -551,17 +551,17 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -570,12 +570,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -584,7 +584,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -600,10 +600,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99995</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -612,41 +612,41 @@
        "      <th>99996</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99997</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99998</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99999</th>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -655,17 +655,17 @@
       ],
       "text/plain": [
        "       0  1  2  3  4  5  6\n",
-       "0      1  1  1  1  0  1  0\n",
-       "1      0  1  0  1  0  1  0\n",
-       "2      0  0  1  1  1  1  1\n",
-       "3      0  1  1  1  1  1  0\n",
-       "4      0  1  0  1  0  1  1\n",
+       "0      1  0  0  1  0  1  0\n",
+       "1      0  0  0  0  1  1  0\n",
+       "2      0  1  1  1  1  1  1\n",
+       "3      1  1  0  1  0  0  0\n",
+       "4      0  1  0  1  1  1  1\n",
        "...   .. .. .. .. .. .. ..\n",
-       "99995  0  1  1  0  0  1  1\n",
-       "99996  1  1  0  0  1  1  1\n",
-       "99997  1  1  1  1  1  1  1\n",
-       "99998  1  1  1  1  0  1  1\n",
-       "99999  1  0  1  1  1  1  1\n",
+       "99995  1  1  1  1  0  1  1\n",
+       "99996  1  1  1  0  1  0  0\n",
+       "99997  1  1  0  1  1  0  1\n",
+       "99998  0  1  1  0  1  1  0\n",
+       "99999  1  1  1  0  1  1  0\n",
        "\n",
        "[100000 rows x 7 columns]"
       ]
@@ -689,7 +689,7 @@
     {
      "data": {
       "text/plain": [
-       "0.99974"
+       "0.99972"
       ]
      },
      "execution_count": 19,
@@ -711,7 +711,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4954"
+       "0.4887"
       ]
      },
      "execution_count": 20,
@@ -741,7 +741,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5858"
+       "0.5871"
       ]
      },
      "execution_count": 21,
@@ -768,7 +768,7 @@
     {
      "data": {
       "text/plain": [
-       "0.1048"
+       "0.1107"
       ]
      },
      "execution_count": 22,
@@ -788,11 +788,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ef0d4064",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df['at_least_two_matching_birthdays'] = df.nunique(axis=1) < ncols\n",
+    "# adds a column to the DataFrame that returns boolean values"
+   ]
   }
  ],
  "metadata": {
