--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -20,13 +20,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[2, 3],\n",
-       "       [3, 4],\n",
+       "array([[1, 1],\n",
+       "       [5, 6],\n",
        "       [1, 6],\n",
        "       ...,\n",
-       "       [1, 3],\n",
-       "       [4, 3],\n",
-       "       [3, 4]])"
+       "       [5, 6],\n",
+       "       [3, 6],\n",
+       "       [3, 2]])"
       ]
      },
      "execution_count": 2,
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "0.16631"
+       "0.16492"
       ]
      },
      "execution_count": 3,
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "0.22007"
+       "0.21896"
       ]
      },
      "execution_count": 4,
@@ -104,6 +104,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "6f65d594",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.85769"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exactly_three = flips.sum(axis=1) >=3\n",
+    "exactly_three.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "63cab66d",
    "metadata": {},
@@ -111,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "0.062875"
+       "0.06403"
       ]
      },
      "execution_count": 5,
@@ -134,28 +156,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "21f0a4bf",
+   "execution_count": 40,
+   "id": "598a2578",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0        15.657674\n",
-       "1        15.296289\n",
-       "2        14.710887\n",
-       "3        19.243520\n",
-       "4        14.255598\n",
-       "           ...    \n",
-       "99995    15.341805\n",
-       "99996     8.132730\n",
-       "99997    15.534415\n",
-       "99998    16.351044\n",
-       "99999    12.860487\n",
-       "Length: 100000, dtype: float64"
+       "       0  1  2  3  4\n",
+       "0      5  5  4  3  3\n",
+       "1      1  3  5  0  3\n",
+       "2      0  1  4  3  3\n",
+       "3      1  2  3  0  5\n",
+       "4      0  2  0  1  0\n",
+       "...   .. .. .. .. ..\n",
+       "99995  3  4  4  2  2\n",
+       "99996  3  3  1  1  3\n",
+       "99997  2  2  4  3  3\n",
+       "99998  2  4  3  4  1\n",
+       "99999  2  4  4  5  0\n",
+       "\n",
+       "[100000 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,27 +312,58 @@
     "n_trials = nrows = 100_000\n",
     "n_days = ncols = 5\n",
     "\n",
-    "#np.random.normal(loc = mean, scale = std, size = rows, columns)\n",
-    "poptarts = np.random.normal(3, 1.5,(nrows,ncols))\n",
+    "#np.random.normal(loc=mean, scale=std, size=rows, columns)\n",
+    "poptarts = np.random.normal(3, 1.5,(nrows,ncols)).astype(int)\n",
     "poptarts = pd.DataFrame(poptarts)\n",
-    "\n",
+    "poptarts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "21f0a4bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        20\n",
+       "1        12\n",
+       "2        11\n",
+       "3        11\n",
+       "4         3\n",
+       "         ..\n",
+       "99995    15\n",
+       "99996    11\n",
+       "99997    14\n",
+       "99998    14\n",
+       "99999    15\n",
+       "Length: 100000, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "pop_tarts_sum = poptarts.sum(axis=1)\n",
     "pop_tarts_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "c9a88e0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         True\n",
+       "0        False\n",
        "1         True\n",
        "2         True\n",
-       "3        False\n",
+       "3         True\n",
        "4         True\n",
        "         ...  \n",
        "99995     True\n",
@@ -199,7 +374,7 @@
        "Length: 100000, dtype: bool"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,17 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "249a7ee0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.72625"
+       "0.88026"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +414,7 @@
     {
      "data": {
       "text/plain": [
-       "0.2119304"
+       "0.2117397"
       ]
      },
      "execution_count": 9,
@@ -272,7 +447,7 @@
     {
      "data": {
       "text/plain": [
-       "0.818884"
+       "0.817809"
       ]
      },
      "execution_count": 10,
@@ -301,17 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "132e8793",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.669948"
+       "0.66995"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +516,7 @@
     {
      "data": {
       "text/plain": [
-       "0.451812"
+       "0.452327"
       ]
      },
      "execution_count": 12,
@@ -374,7 +549,7 @@
     {
      "data": {
       "text/plain": [
-       "0.165176"
+       "0.164592"
       ]
      },
      "execution_count": 13,
@@ -407,12 +582,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 1],\n",
+       "array([[0, 1, 1],\n",
+       "       [1, 0, 1],\n",
        "       [1, 1, 1],\n",
-       "       [1, 1, 0],\n",
        "       ...,\n",
-       "       [1, 1, 1],\n",
-       "       [0, 1, 1],\n",
+       "       [1, 0, 1],\n",
+       "       [1, 1, 0],\n",
        "       [1, 1, 1]])"
       ]
      },
@@ -453,7 +628,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0265"
+       "0.0261"
       ]
      },
      "execution_count": 16,
@@ -476,13 +651,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0, ..., 0, 1, 0],\n",
-       "       [0, 0, 0, ..., 1, 1, 0],\n",
-       "       [0, 1, 1, ..., 1, 1, 1],\n",
+       "array([[1, 1, 0, ..., 0, 1, 1],\n",
+       "       [0, 1, 1, ..., 0, 1, 0],\n",
+       "       [1, 1, 0, ..., 0, 0, 0],\n",
        "       ...,\n",
-       "       [1, 1, 0, ..., 1, 0, 1],\n",
-       "       [0, 1, 1, ..., 1, 1, 0],\n",
-       "       [1, 1, 1, ..., 1, 1, 0]])"
+       "       [1, 1, 1, ..., 0, 1, 0],\n",
+       "       [1, 1, 1, ..., 0, 1, 1],\n",
+       "       [1, 1, 1, ..., 1, 0, 1]])"
       ]
      },
      "execution_count": 17,
@@ -491,7 +666,9 @@
     }
    ],
    "source": [
+    "# Revisit This\n",
     "# How likely that a truck shows up sometime this week?\n",
+    "# I calculated 7 days thinking, \"will it show up sometime this coming week?\"\n",
     "p_truck = (0.7,0.3)\n",
     "days = ncols = 7\n",
     "trials = nrows = 100_000\n",
@@ -541,46 +718,46 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -602,51 +779,51 @@
        "      <th>99995</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99996</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99997</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99998</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99999</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -655,17 +832,17 @@
       ],
       "text/plain": [
        "       0  1  2  3  4  5  6\n",
-       "0      1  0  0  1  0  1  0\n",
-       "1      0  0  0  0  1  1  0\n",
-       "2      0  1  1  1  1  1  1\n",
-       "3      1  1  0  1  0  0  0\n",
-       "4      0  1  0  1  1  1  1\n",
+       "0      1  1  0  1  0  1  1\n",
+       "1      0  1  1  1  0  1  0\n",
+       "2      1  1  0  1  0  0  0\n",
+       "3      1  0  1  1  1  1  1\n",
+       "4      1  1  0  1  1  1  1\n",
        "...   .. .. .. .. .. .. ..\n",
-       "99995  1  1  1  1  0  1  1\n",
-       "99996  1  1  1  0  1  0  0\n",
-       "99997  1  1  0  1  1  0  1\n",
-       "99998  0  1  1  0  1  1  0\n",
-       "99999  1  1  1  0  1  1  0\n",
+       "99995  1  1  0  0  0  1  0\n",
+       "99996  0  1  0  0  0  1  1\n",
+       "99997  1  1  1  1  0  1  0\n",
+       "99998  1  1  1  1  0  1  1\n",
+       "99999  1  1  1  1  1  0  1\n",
        "\n",
        "[100000 rows x 7 columns]"
       ]
@@ -689,7 +866,7 @@
     {
      "data": {
       "text/plain": [
-       "0.99972"
+       "0.99981"
       ]
      },
      "execution_count": 19,
@@ -711,7 +888,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4887"
+       "0.4922"
       ]
      },
      "execution_count": 20,
@@ -720,6 +897,7 @@
     }
    ],
    "source": [
+    "# Revisit This\n",
     "#8 If 23 people are in the same room, what are the odds that two of them share a birthday? \n",
     "# What if it's 20 people? 40?\n",
     "\n",
@@ -741,7 +919,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5871"
+       "0.5861"
       ]
      },
      "execution_count": 21,
@@ -768,7 +946,7 @@
     {
      "data": {
       "text/plain": [
-       "0.1107"
+       "0.1073"
       ]
      },
      "execution_count": 22,
