--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -137,6 +137,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d98c2da2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to plot a normal distribution : \n",
+    "# μ = 3\n",
+    "# σ = 0.3\n",
+    "# x = np.linspace(μ - 3*σ, μ + 3*σ, 100)\n",
+    "# plt.plot(x, stats.norm.pdf(x, μ, σ))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "9b3766dc",
    "metadata": {},
