--- a/Hypothesis-Testing-Overview.ipynb
+++ b/Hypothesis-Testing-Overview.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "[757 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "Name: 4, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "(32, 4)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "5  Black   Blue  Male    11"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "32"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "592"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "2  Brown  Brown  Male    53  Brown, Brown, Male"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "1  Black  Brown  Male    32  Black, Brown, Male"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "'Black, Brown, Male'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "32"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "       'Black, Brown, Male', 'Black, Brown, Male'], dtype='<U18')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        " 'Black, Brown, Male']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
        "32"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "85"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
        " 'Brown, Brown, Male']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "2  Black, Brown, Male"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
        "592"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>traits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Black, Brown, Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Black, Brown, Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Black, Brown, Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               traits\n",
+       "0  Black, Brown, Male\n",
+       "1  Black, Brown, Male\n",
+       "2  Black, Brown, Male"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a dataframe from the list.\n",
+    "obs_df = pd.DataFrame({'traits': obs})\n",
+    "obs_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1236,7 @@
        "2  Black  Brown  Male"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1309,7 @@
        "2  Black  Brown  Male"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,11 +1708,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each of the following questions, \n",
+    "formulate a null and alternative hypothesis \n",
+    " (be as specific as you can be), then give an example of what a true positive, true negative, \n",
+    "type I and type II errors would look like. Note that some of the questions are intentionally phrased in a vague way. \n",
+    "It is your job to reword these as more precise questions that could be tested.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Has the network latency gone up since we switched internet service providers?\n",
+    "\n",
+    "null : there is no difference in latency from switching internet services\n",
+    "alternative: latency is greater after switching internet serivce providers\n",
+    "\n",
+    "true positive: the latency was grater after switching internet service providers\n",
+    "true negative: the latency was less after switching internet service providers\n",
+    "\n",
+    "type 1: we sampled people who had a higher than average latency, when the overall population experienced a decrease or no change.\n",
+    "\n",
+    "type 2: we sampled people that had no change no change when the greater population experienced a higher than average latency\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is the website redesign any good?\n",
+    "\n",
+    "null: there is no change in sales (assuming that is the focus of this site) after the the redesign of the website\n",
+    "alternative: sales increased due to the redesign of the website\n",
+    "\n",
+    "true positive: sales increased over a certain time period after the redesign\n",
+    "\n",
+    "true negative: there was no change in sales after the website was redesigned\n",
+    "\n",
+    "type 1: there was increase in sales due to a demand of a specific item, but not because of the redesign\n",
+    "\n",
+    "type 2: the no change in sales is due to lack of advertisement\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is our television ad driving more sales?\n",
+    "\n",
+    "null: there is no change in sales due to the television ad (perhaps in a 6 month period?)\n",
+    "alternative: sales went up after the release of the television ad (during that period)\n",
+    "\n",
+    "true positive: sales increased after the release of the tv ad\n",
+    "true negative: there was no change in sales after the release of the tv ad\n",
+    "\n",
+    "type 1: the population sampled showed no change in sales, but perhaps the population doesn't watch tv\n",
+    "\n",
+    "type 2: the population sampled went up due to an increase in demand or other means of advertisement outside of the television media outlet"
+   ]
   }
  ],
  "metadata": {
